# SVEL

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
SVEL/: CMakeLists.txt
SVEL/include/svel/: config.h  svel.h
SVEL/include/svel/detail/: app.h  image.h  keys.h  material.h  mesh.h  pipeline.h  renderer.h  shader.h  texture.h  window.h
SVEL/include/svel/util/: array_proxy.hpp  structs.hpp
SVEL/src/: app.cpp  app.h  main.cpp  window.cpp  window.h
SVEL/src/core/: barrier.cpp  barrier.h  device.cpp  device.h  image.cpp  image.h  instance.cpp  instance.h  shader.cpp  shader.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  window.cpp  window.h
SVEL/src/core/descriptor/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  buffer_interface.cpp  buffer_interface.h  dynamic_buffer.cpp  dynamic_buffer.h  group.cpp  group.h  image.hpp  queue.cpp  queue.h  set.cpp  set.h  static_buffer.cpp  static_buffer.h  textureInterface.hpp  util.hpp  write_handler.cpp  write_handler.h
SVEL/src/core/event/: notifier.hpp
SVEL/src/core/memory/: buffer.cpp  buffer.h  device_memory.cpp  device_memory.h  image.cpp  image.h  transfer_buffer.cpp  transfer_buffer.h
SVEL/src/impl/: app.cpp  app.h  shader.cpp  shader.h  window.cpp  window.h
SVEL/src/io/util/: tuple_hash.hpp
SVEL/src/renderer/: frame.cpp  frame.h  renderer.cpp  renderer.h  shader.cpp  shader.h
SVEL/src/renderer/material/: material.cpp  material.h  scene.cpp
SVEL/src/renderer/mesh/: buffer.cpp  buffer.h  mesh.cpp  mesh.h
SVEL/src/renderer/pipeline/: pipeline.cpp  pipeline.h
SVEL/src/texture/: animation.cpp  animation.h  atlas.cpp  atlas.h  image_impl.cpp  sprite_sheet_impl.cpp  texture.cpp  texture.h
SVEL/src/util/: array_proxy.hpp  downcast_impl.hpp  macros.hpp  prioritized_order.hpp  vulkan_object.hpp
SVEL/src/window/: window.cpp  window.h
SVEL/src/window/input/: CMakeLists.txt  glfwCallbacks.cpp  glfwCallbacks.h  keyMapping.cpp  keyMapping.h
doc/templates/: header.html
